--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ footer {
 
     <main>
         <section>
-            <center><img src="fff.png" alt="Banner"></center>
+            <center><img src="fff.PNG" alt="Banner"></center>
             <center><h1>Assessment Exam O-level</h1></center>
             <p>
                 <center><b><h2 style="background-color:powderblue; color:Tomato;">PLEASE READ THE BELOW INSTRUCTION CAREFULLY</h2></b></center>
