--- a/index.html
+++ b/index.html
@@ -6,131 +6,7 @@
     <title>Karamraji Institute of Computer Science & IT</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        
-
-body, h1, h2, p, ul, li {
-    margin: 0;
-    padding: 0;
-}
-
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #ffffff;
-    color: #030000;
-    line-height: 1.6;
-}
-
-
-header {
-    background-color: #00295b;
-    color: #ffffff;
-    padding: 20px 0;
-    text-align: center;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 960px;
-    margin: 0 auto;
-    background-color: #fafafa; 
-    padding: 10px 30px; 
-}
-
-.logo img {
-    align-items: center;
-    max-height: 200px; 
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li:last-child {
-    margin-right: 0;
-}
-
-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-}
-
-
-
-main {
-    max-width: 960px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #a3b1bb;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-button {
-    background-color: #333;
-    color: #f7f8fc;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 14px;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: #2505f8;
-}
-
-
-footer {
-    text-align: center;
-    padding: 20px 0;
-    background-color: #333;
-    color: #f8f4f4;
-    font-size: 14px;
-}
-
-        body {
-            font-family: Verdana, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 20px;
-        }
-        .card-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-        .card {
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 20px;
-            width: 200px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        button {
-            background-color: red;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: lightblue;
-        }
+        /* Your existing styles here */
     </style>
 </head>
 <body>
@@ -180,6 +56,12 @@ footer {
                 <div class="card">
                     <h3>IoT ( M4-R5 )</h3>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSctzXPVooM5eYcwV_DZWIxhTP8_V5d2YFfHwMXi5JQ9XYy0Dw/closedform">
+                        <button>Click here</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <h3>Tally Main Exam</h3>
+                    <a href="https://docs.google.com/forms/d/e/YOUR_FORM_LINK_HERE/closedform">
                         <button>Click here</button>
                     </a>
                 </div>
