--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Karamraji Institute of Computer Science & IT</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        
+        /* Your existing styles here */
     </style>
 </head>
 <body>
