--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         }
 
         .logo img {
-            height: 80px; /* Adjust as needed */
-            width: auto;  /* Maintains aspect ratio */
+            height: 80px;
+            width: auto;
         }
 
         main {
@@ -55,9 +55,10 @@
 
         /* Card styles */
         .card-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            display: flex;
+            flex-wrap: wrap; /* Allow wrapping */
+            justify-content: center; /* Center-align cards */
+            gap: 20px; /* Space between cards */
             margin: 20px 0;
         }
 
@@ -67,6 +68,9 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            width: 250px; /* Fixed width for consistency */
+            flex-shrink: 0; /* Prevent shrinking */
+            text-align: center; /* Center content inside cards */
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
