--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card">
                     <h3>Tally Main Exam</h3>
-                    <a href="https://docs.google.com/forms/d/e/YOUR_FORM_LINK_HERE/closedform">
+                    <a href="https://forms.gle/qpv6KfthcFzfaJLZ6">
                         <button>Click here</button>
                     </a>
                 </div>
