--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card">
                     <h3>Tally Main Exam</h3>
-                    <a href="https://forms.gle/qpv6KfthcFzfaJLZ6">
+                    <a href="https://forms.gle/MByeoXCFk95vrxQ88">
                         <button>Click here</button>
                     </a>
                 </div>
